2010-12-26  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #16661: include TSRef changes for t3editor code completion (thanks to Christian Kartnig)

2010-12-23  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16825: Fatal error in lang.php (thanks to Georg Ringer)

2010-12-21  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16786: Versioning: Generating preview link not working (thanks to Frederic Gaus)

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16760: RTE transformation removes all span tags on save after upgrade TYPO3 4.4.5

2010-12-20  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16134: TYPO3 doesn't always fix permissions for new files

2010-12-19  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16777: Test failure in t3lib_extmgmTest if tests are located in typo3_src/tests/ instead of tests/ (Thanks to Oliver Klee)
	* Fixed bug #16790: Typo in topbar CSS

2010-12-17  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #5186: fixed rendering of multi-column image rows (thanks to Michael Bürgi)

2010-12-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14500: Bug: Unit test failures in t3lib_matchCondition_backend_testcase (Thanks to Oliver Klee)

2010-12-17  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16470: Scheduler fails to calculateNextValue a turn of the year (thanks to Tobias Hövelborn and Christian Kuhn)

2010-12-17  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #16764: Insufficient information about which class is failing to implement interfaces in tslib_cObj->start()

2010-12-16  Oliver Hader  <oliver.hader@typo3.org>

	* Release of TYPO3 4.4.5

2010-12-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14402: XSS in Install tool (thanks to Benjamin Mack)
	* Fixed bug #16590: t3lib_TSparser::checkIncludeLines() does not check files to be included (thanks to Fabrizio Branca)
	* Fixed bug #15737: quoteStrForLike does not properly escape strings in sql_mode NO_BACKSLASH_ESCAPES